--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -21,6 +21,6 @@ $dark: #1d1d1d;
 $dark-page: #121212;
 
 $positive: #21ba45;
-$negative: #c10015;
+$negative: #e63946;
 $info: #31ccec;
 $warning: #f2c037;
