--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -20,7 +20,7 @@ $text: #f1faee;
 $dark: #1d1d1d;
 $dark-page: #121212;
 
-$positive: #21ba45;
+$positive: #5cba72;
 $negative: #e63946;
 $info: #31ccec;
 $warning: #f2c037;
